--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,23 @@
 html,
 body {
+  width: 100vw;
+  height: 100vh;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-image: linear-gradient(
+    to right top,
+    #bad3f9,
+    #beccf4,
+    #c3c4ee,
+    #c8bde7,
+    #cdb5de
+  );
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 a {
@@ -13,4 +27,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.home-p {
+  width: 800px;
 }
